--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,18 +6,18 @@
   "main": "src/index.js",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
-    "@shopify/polaris": "4.18.0",
+    "@shopify/polaris": "5.8.6",
     "@shopify/polaris-icons": "3.10.0",
     "apollo-boost": "^0.1.16",
     "apollo-client": "^2.4.2",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "react": "16.12.0",
     "react-apollo": "^3.1.5",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.4"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -30,7 +30,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "prettier-eslint": "^9.0.1",
-    "typescript": "3.3.3"
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
